--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -15,10 +15,10 @@
     <div class="hero-body shader">
       <div class="container">
         <p class="title is-size-1 has-text-weight-bold mb-0">
-          Minimum Viable POWER
+          MVPT
         </p>
         <p class="subtitle has-text-weight-bold pt-5">
-          Minimum Viable Plotter Overseer With Remote Engagement
+          Minimum Viable Plotter Tool
         </p>
       </div>
     </div>
